feat: migrate users module